Fix style for events

--- a/src/devtools/client/themes/variables.css
+++ b/src/devtools/client/themes/variables.css
@@ -59,6 +59,17 @@
   --new-blue-800: #2569ad;
   --new-blue-900: #215487;
 
+  --cool-gray-50: #F9FAFB;
+  --cool-gray-100: #F3F4F6;
+  --cool-gray-200: #E5E7EB;
+  --cool-gray-300: #D1D5DB;
+  --cool-gray-400: #9CA3AF;
+  --cool-gray-500: #6B7280;
+  --cool-gray-600: #4B5563;
+  --cool-gray-700: #374151;
+  --cool-gray-800: #1F2937;
+  --cool-gray-900: #111827;
+
   --magenta-50: #ff1ad9;
   --magenta-65: #dd00a9;
   --magenta-70: #b5007f;
