--- a/src/ui/components/Timeline/Timeline.css
+++ b/src/ui/components/Timeline/Timeline.css
@@ -159,4 +159,5 @@
   background: var(--theme-toolbar-background);
   transform: translateX(-50%);
   box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
+  user-select: none;
 }
