Tweak toolbar for comments

--- a/src/ui/components/Toolbox.css
+++ b/src/ui/components/Toolbox.css
@@ -72,3 +72,7 @@
 .toolbar-panel-button.active .toolbar-panel-icon {
   background: var(--primary-accent);
 }
+
+.debugger-panel.toolbar-panel-icon.paused {
+  background-color: var(--secondary-accent);
+}
