Show the timeline tooltip on transcript item hover fixes #1806

--- a/src/ui/components/Comments/Comments.css
+++ b/src/ui/components/Comments/Comments.css
@@ -41,6 +41,10 @@ deletes the comment */
   background-color: var(--replaying-paused-marker-fill);
 }
 
+.comments-container .img.comment-marker.primary-highlight {
+  background-color: var(--new-blue-800);
+}
+
 .create-comment {
   width: 15px;
   height: 15px;
