--- a/src/ui/components/Comments/CommentThread.css
+++ b/src/ui/components/Comments/CommentThread.css
@@ -113,6 +113,29 @@
   text-overflow: ellipsis;
 }
 
+.comment-body-item {
+  position: relative;
+}
+
+.comment-body-item:not(:last-child)::after {
+  content: "";
+  width: 1px;
+  height: calc(100% - 30px);
+  background: #c5c5c5;
+  position: absolute;
+  left: 12px;
+  top: 31px;
+}
+
+.comment-body-item:first-child::before {
+  content: "";
+  width: 1px;
+  height: 13px;
+  background: #c5c5c5;
+  position: absolute;
+  left: 12px;
+  top: -13px;
+}
 .transcript-list .dropdown-block {
   align-self: flex-start;
   flex-shrink: 0;
