--- a/src/ui/components/Comments/CommentThread.css
+++ b/src/ui/components/Comments/CommentThread.css
@@ -239,12 +239,53 @@
   flex-grow: 1;
   font-size: 12px;
   line-height: 18px;
-  margin-top: 3px;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
   color: var(--theme-comment);
+}
+
+.transcript-list .comment-input-actions {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.transcript-list .comment-input-actions button {
+  padding: 4px 8px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.transcript-list .comment-input-actions button.action-cancel {
+  text-decoration: underline;
+  font-size: 12px;
+  color: var(--theme-comment);
+}
+
+.transcript-list .comment-input-actions button.action-submit {
+  background: var(--primary-accent);
+  color: var(--theme-body-background);
+  font-size: 14px;
+}
+
+.transcript-list .comment-input-actions button.action-submit:hover {
+  background: var(--primary-accent);
+}
+
+.transcript-list .comment-input > :not(:first-child) {
+  margin-top: 8px;
 }
 
 .transcript-list .comment-input:hover {
   cursor: text;
+}
+
+.transcript-list .draft-editor-container {
+  padding: 4px 8px;
+  border: 1px solid var(--primary-accent);
+  border-radius: 4px;
 }
 
 .transcript-list .responsive-textarea {
@@ -262,7 +303,6 @@
 .transcript-list .img.paper-airplane {
   width: 20px;
   height: 20px;
-  margin-bottom: 2px;
   color: var(--theme-icon-color);
   transform: rotate(90deg);
   cursor: pointer;
