Add individual comment edit and delete

--- a/src/ui/components/Comments/CommentThread.css
+++ b/src/ui/components/Comments/CommentThread.css
@@ -171,6 +171,10 @@
 }
 
 .transcript-list .comment-actions {
+  display: none;
+}
+
+.transcript-list .comment-body-item:hover .comment-actions {
   display: flex;
   flex-direction: row;
 }
