--- a/src/devtools/client/themes/variables.css
+++ b/src/devtools/client/themes/variables.css
@@ -396,6 +396,7 @@ custom variable for it below so we can keep track of everything in one place. */
 }
 
 #app {
+  --z-index-1--timeline-comment: var(--z-index-1);
   --z-index-1--paused-comment: var(--z-index-1);
   --z-index-1--paused-message: var(--z-index-1);
   --z-index-1--comment-container: var(--z-index-1);
