--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  font-family: system-ui, Arial, sans-serif;
   --light-grey: #969696;
   --dark-grey: #696969;
   --light-blue: #61cdff;
