--- a/src/devtools/client/debugger/src/components/PrimaryPanes/Sources.css
+++ b/src/devtools/client/debugger/src/components/PrimaryPanes/Sources.css
@@ -76,10 +76,8 @@ div.sources-pane {
   color: #ffffff;
 }
 
-/* Use the same width as .img.arrow */
 .sources-list .tree .img.no-arrow {
-  width: 10px;
-  visibility: hidden;
+  display: none;
 }
 
 .sources-list .tree .label .suffix {
