--- a/src/ui/components/Header/Header.css
+++ b/src/ui/components/Header/Header.css
@@ -34,11 +34,6 @@
   margin-left: 8px;
 }
 
-#header .subtitle {
-  color: var(--theme-text-color-inactive);
-  font-style: italic;
-}
-
 #status {
   padding-left: 10px;
   flex-grow: 1;
@@ -81,14 +76,13 @@
 
 #header .title {
   max-width: 320px;
-  font-size: 1.25rem;
+  font-size: 16px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   cursor: text;
   line-height: 18px;
   margin-right: 0.5em;
-  color: var(--primary-accent);
 }
 
 #header input.title:focus {
@@ -132,15 +126,3 @@ button.login:focus {
     opacity: 1;
   }
 }
-
-/* @media (max-width: 760px) {
-  #header .title {
-    width: 140px;
-  }
-}
-
-@media (max-width: 600px) {
-  #header .title {
-    display: none;
-  }
-} */
