--- a/src/ui/components/Header/ViewToggle.css
+++ b/src/ui/components/Header/ViewToggle.css
@@ -1,38 +1,51 @@
 .view-toggle {
-  border-radius: 4px;
-  box-shadow: 0px 0px 0px 1px var(--primary-accent) inset;
-  color: var(--primary-accent);
+  font-family: "Open Sans", sans-serif;
+  display: flex;
+  padding: 2px 0;
+  cursor: pointer;
+  text-align: left;
+  padding: 0;
+  width: auto;
+  appearance: none;
+  border: none;
+  outline: 0;
+  border-radius: 8px;
+}
+
+.view-toggle .inner {
+  background: var(--cool-gray-200);
+  border: 2px solid var(--cool-gray-200);
+  display: flex;
+  align-items: stretch;
+  border-radius: 8px;
+}
+
+.view-toggle .option {
   display: flex;
   align-items: center;
-  cursor: pointer;
-  line-height: 16px;
+  position: relative;
 }
 
-.view-toggle:hover {
-  background: inherit;
+.view-toggle .text {
+  font-size: 14px;
+  padding: 4px 24px;
+  white-space: nowrap;
+  color: rgba(0, 0, 0, 0.5);
+  position: relative;
+  z-index: 1;
+  transition: ease 200ms color;
+}
+.view-toggle .active {
+  color: #000;
 }
 
-.view-toggle:focus:not(:focus-visible) {
-  outline: none;
-  background: inherit;
-}
-
-.view-toggle .view-toggle-item {
-  padding: 4px 14px;
-  font-weight: 700;
-}
-
-.view-toggle .view-toggle-item.active {
-  background: var(--dark-blue);
-  color: var(--theme-body-background);
-}
-
-.view-toggle .view-toggle-non-dev {
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-}
-
-.view-toggle .view-toggle-dev {
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
+.view-toggle .handle {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  background-color: white;
+  border-radius: 8px;
 }
