--- a/src/ui/components/Comments/CommentThread.css
+++ b/src/ui/components/Comments/CommentThread.css
@@ -79,29 +79,22 @@
 }
 
 .transcript-list .comment-body-header {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.transcript-list .comment-body-header > :not(:first-child) {
-  margin-left: 16px;
+  display: grid;
+  grid-template-rows: auto min-content;
+  grid-template-columns: auto minmax(0, 1fr) auto;
+  grid-gap: 16px;
 }
 
 .transcript-list .comment-body-header .comment-picture {
   width: 27px;
   height: 27px;
   border-radius: 50%;
-  align-self: flex-start;
+  grid-row: 1 / 2;
   z-index: 10;
 }
 
 .transcript-list .comment-body-header-label {
-  display: flex;
-  flex-grow: 1;
-  flex-direction: column;
-  align-items: baseline;
-  overflow: hidden;
+  grid-row: 1 / 3;
 }
 
 .comment-body-header-label-name {
@@ -176,6 +169,22 @@
   width: 100%;
 }
 
+/* Override base styles for markdown-formatted content */
+.transcript-list .item-content p {
+  margin-block-start: 1em;
+  padding: 0;
+}
+
+.transcript-list .item-content p:first-child {
+  margin-block-start: 0;
+}
+
+.transcript-list .item-content ul,
+.transcript-list .item-content ol {
+  padding-inline-start: 25px;
+  margin-block: 1em;
+}
+
 .transcript-list img {
   width: 27px;
   height: 27px;
@@ -183,14 +192,14 @@
 }
 
 .transcript-list .comment-actions {
-  display: none;
+  visibility: hidden;
+  align-self: center;
 }
 
 /* Added .hover class here for testing purposes */
 .transcript-list .comment-body-item:hover .comment-actions,
 .transcript-list .comment-body-item.hover .comment-actions {
-  display: flex;
-  flex-direction: row;
+  visibility: visible;
 }
 
 .transcript-list .comment-actions .dropdown-button {
@@ -247,10 +256,6 @@
 
 .transcript-list .comment-input-container img {
   align-self: start;
-}
-
-.transcript-list .comment-input-container > :not(:first-child) {
-  margin-left: 16px;
 }
 
 .transcript-list .comment-input {
