--- a/src/ui/components/Dashboard/RecordingItem/RecordingListItem.css
+++ b/src/ui/components/Dashboard/RecordingItem/RecordingListItem.css
@@ -101,6 +101,7 @@
 .recording-list.list .recording-item .screenshot {
   background: var(--theme-toolbar-background);
   height: 100%;
+  width: 85px;
 }
 
 .recording-list.list .recording-item.selected {
