Add markdown patch

--- a/src/ui/components/Comments/TranscriptComments/CommentActions.css
+++ b/src/ui/components/Comments/TranscriptComments/CommentActions.css
@@ -1,12 +1,12 @@
 .transcript-list .comment-actions {
-  display: none;
+  visibility: hidden;
+  align-self: center;
 }
 
 /* Added .hover class here for testing purposes */
 .transcript-list .comment-body-item:hover .comment-actions,
 .transcript-list .comment-body-item.hover .comment-actions {
-  display: flex;
-  flex-direction: row;
+  visibility: visible;
 }
 
 .transcript-list .comment-actions .dropdown-button {
