--- a/src/ui/components/Header/ViewToggle.css
+++ b/src/ui/components/Header/ViewToggle.css
@@ -27,8 +27,8 @@
 }
 
 .view-toggle .text {
-  font-size: 12px;
-  padding: 3px 12px;
+  font-size: 16px;
+  padding: 3px 36px;
   white-space: nowrap;
   color: rgba(0, 0, 0, 0.5);
   position: relative;
@@ -37,6 +37,7 @@
 }
 .view-toggle .active {
   color: #000;
+  font-weight: bold;
 }
 
 .view-toggle .handle {
