Don't allow users to add and display logs for breakpoint with >250 hits

--- a/src/devtools/client/themes/variables.css
+++ b/src/devtools/client/themes/variables.css
@@ -217,6 +217,7 @@
   /* Common popup styles(used by HTMLTooltip and autocomplete) */
   --theme-popup-background: white;
   --theme-popup-color: var(--grey-70);
+  --theme-errant-popup-color: #991B1B;
   --theme-popup-border-color: ThreeDShadow;
   --theme-popup-dimmed: hsla(0, 0%, 80%, 0.3);
 
