--- a/src/devtools/client/debugger/src/components/Editor/Breakpoints/Panel/Panel.css
+++ b/src/devtools/client/debugger/src/components/Editor/Breakpoints/Panel/Panel.css
@@ -246,3 +246,28 @@
 .breakpoint-panel .breakpoint-navigation-commands button:not(.disabled):hover {
   background-color: var(--theme-toolbar-background-hover);
 }
+
+/* Breakpoint Warning */
+
+.breakpoint-panel .warning {
+  display: flex;
+  align-items: center;
+  padding: 8px;
+  font-size: 12px;
+  color: var(--theme-errant-popup-color);
+}
+
+.breakpoint-panel .warning .material-icons {
+  font-size: 20px;
+  margin-right: 4px;
+  color: var(--theme-errant-popup-color);
+  flex-shrink: 0;
+}
+
+.breakpoint-panel .warning .warning-content {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  flex-grow: 1;
+  white-space: pre;
+}
+
