--- a/src/devtools/client/debugger/src/components/Editor/LineNumberTooltip.css
+++ b/src/devtools/client/debugger/src/components/Editor/LineNumberTooltip.css
@@ -14,6 +14,20 @@
   animation-fill-mode: forwards;
   min-width: 42px; /* Reduces jitter between loading state (...) and non-loading state (3 hits) */
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+}
+
+.static-tooltip.hot {
+  background: var(--theme-errant-popup-color);
+}
+
+.static-tooltip.hot .material-icons {
+  font-size: 16px;
+  color: white;
+  margin-right: 4px;
 }
 
 @keyframes static-tooltip {
