Allow users to create workspaces

--- a/src/ui/components/Dashboard/Navigation/DashboardNavigation.css
+++ b/src/ui/components/Dashboard/Navigation/DashboardNavigation.css
@@ -1,20 +1,20 @@
 .left-sidebar {
-  width: 240px;
+  width: 320px;
   background: var(--theme-toolbar-background);
   border-right: 1px solid var(--theme-splitter-color);
-  padding: 40px 8px;
+  padding: 8px 6px;
+  font-size: 12px;
   overflow: hidden;
   display: flex;
   flex-direction: column;
 }
 
-.left-sidebar > * {
-  font-size: 1.2rem;
-  color: var(--theme-comment);
+.left-sidebar > :not(:first-child) {
+  margin-top: 20px;
 }
 
-.left-sidebar hr {
-  margin: 20px;
+.left-sidebar .material-icons {
+  font-size: 16px;
 }
 
 .left-sidebar .recording-hosts {
