Style the error refresh button

--- a/src/ui/components/shared/Error.css
+++ b/src/ui/components/shared/Error.css
@@ -75,6 +75,12 @@
   background-color: white;
   width: 80px;
   height: 80px;
+  z-index: 100;
+}
+
+.transparent-error-content .img.refresh:hover {
+  background: #ffffdd;
+  cursor: pointer;
 }
 
 .transparent-error-content .message {
