--- a/src/ui/components/Header/UserOptions.css
+++ b/src/ui/components/Header/UserOptions.css
@@ -8,6 +8,11 @@
   padding: 0px 4px;
 }
 
+.user-options .material-icons.more {
+  border: 2px solid var(--theme-icon-color);
+  border-radius: 50%;
+}
+
 .user-options button.expand-dropdown .avatar.first-player img {
   height: 24px;
   width: 24px;
