Revert "Add mention support (#2168)"
This reverts commit 93bb86f3cbe8dc0717fad8f5e8824addb98cb6c8.

--- a/src/ui/components/Comments/TranscriptComments/CommentEditor/DraftJSEditor.css
+++ b/src/ui/components/Comments/TranscriptComments/CommentEditor/DraftJSEditor.css
@@ -1,7 +1,7 @@
 
 /* These styles override the default emoji popover
    to constrain it to the narrow comment pane */
-.pluginPopover {
+.emojiSuggestions {
   position: absolute;
   top: calc(100% + 8px) !important;
   left: 0 !important;
@@ -15,7 +15,7 @@
   min-width: auto;
 }
 
-.flipPopup .pluginPopover {
+.flipPopup .emojiSuggestions {
   top: auto !important;
   bottom: calc(100% + 8px) !important;
 }
