Add invite system

--- a/src/ui/components/shared/SettingsModal/SettingsBody.css
+++ b/src/ui/components/shared/SettingsModal/SettingsBody.css
@@ -1,6 +1,8 @@
 .settings-modal main {
   padding: 36px;
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .settings-modal main > :not(:first-child) {
