--- a/src/ui/components/shared/SettingsModal/SettingsNavigation.css
+++ b/src/ui/components/shared/SettingsModal/SettingsNavigation.css
@@ -17,26 +17,27 @@
 }
 
 .settings-modal nav li {
-  font-size: 17px;
+  font-size: 16px;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.settings-modal nav li .material-icons {
+  font-size: 20px;
+  color: var(--theme-icon-color);
 }
 
 .settings-modal nav li.selected {
   color: var(--primary-accent);
 }
 
-.settings-modal nav li.selected .img {
-  background: var(--primary-accent);
+.settings-modal nav li.selected .material-icons {
+  color: var(--primary-accent);
 }
 
 .settings-modal nav li > :not(:first-child) {
   margin-left: 8px;
-}
-
-.settings-modal nav li .img {
-  height: 20px;
-  width: 20px;
-  background-color: var(--theme-icon-color);
 }
 
 .settings-modal nav li span {
